--- a/INI/sut.ini
+++ b/INI/sut.ini
@@ -1,11 +1,16 @@
 [DEFAULT]
-os=linux
-ip=10.89.92.2
+
+os=windows
+ip= 10.89.91.252
+;ip=10.89.92.13
+;ip=10.112.247.69
 ssh_port=22
+web_port=443
 
 [linux]
 user=root
 password=password
+python_path = /usr/bin/python
 
 [vmware]
 user=root
@@ -14,9 +19,36 @@ password=intel@123
 [windows]
 user=administrator
 password=intel@123
+python_path = C:\Python36\python.exe
+powershell_path = C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe
 
 [host]
+root_path=c:\
+python_path = C:\Python36\python.exe
+powershell_path = C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe
 
+
+
+[args]
+;param path_pattern_exluded_tuple: Hit the direct exclusion of these regular
+;param file_suffix_tuple_exluded: These end files are excluded
+;param only_upload_within_the_last_modify_time: Only upload files modified in recent days
+;param file_volume_limit: Those larger than this volume are not uploaded. The unit is b.
+
+path_pattern_exluded_tuple=.git,.idea
+file_suffix_tuple_exluded=.pyc,.log,.gz
+only_upload_within_the_last_modify_time=3650 * 24 * 60 * 60
+file_volume_limit=1000 * 1000 * 100
+
+
+;; Taiwan proxy
+proxy=proxy-iind.intel.com:911
+;; ShangHai proxy
+;proxy=child-prc.intel.com:913
+
+ini=../INI/%(os)s.ini
+pip_source = https://pypi.org/simple
+timeout = 100
 
 
 
