--- a/INI/sut.ini
+++ b/INI/sut.ini
@@ -1,11 +1,13 @@
 [DEFAULT]
 
-os=windows
-ip= 10.89.91.252
+os=linux
+;ip= 10.89.91.252
 ;ip=10.89.92.13
 ;ip=10.112.247.69
-ssh_port=22
+ip=10.148.207.199
+ssh_port=4022
 web_port=443
+domain=virtualization
 
 [linux]
 user=root
@@ -36,17 +38,19 @@ powershell_path = C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe
 ;param file_volume_limit: Those larger than this volume are not uploaded. The unit is b.
 
 path_pattern_exluded_tuple=.git,.idea
-file_suffix_tuple_exluded=.pyc,.log,.gz
+file_suffix_tuple_exluded=.log,.gz
 only_upload_within_the_last_modify_time=3650 * 24 * 60 * 60
-file_volume_limit=1000 * 1000 * 100
+file_volume_limit=1024 * 1024 * 1024 * 1024 * 1024 * 1024
 
 
-;; Taiwan proxy
-proxy=proxy-iind.intel.com:911
-;; ShangHai proxy
-;proxy=child-prc.intel.com:913
+;;Taiwan    proxy=proxy-iind.intel.com:911
+;;America   proxy=proxy-us.intel.com:911
+;;ShangHai  proxy=proxy=child-prc.intel.com:913
+;;India     proxy=proxy01.iind.intel.com:911
+;;Common    proxy=proxy-chain.intel.com:911
 
-ini=../INI/%(os)s.ini
+proxy=proxy-us.intel.com:911
+ini=../INI/%(domain)s/machine_setup/%(os)s.ini
 pip_source = https://pypi.org/simple
 timeout = 100
 
